--- a/public/scss/_components.images.scss
+++ b/public/scss/_components.images.scss
@@ -17,6 +17,7 @@
 	margin:0 auto;
 	img {
 		margin:0;
+		vertical-align: bottom;
 	}
 }
 .pht-fig__inner {
