--- a/public/scss/_components.waypoints.scss
+++ b/public/scss/_components.waypoints.scss
@@ -4,6 +4,11 @@
 .pht-waypoint {opacity:0;}
 .pht-animated {opacity:1}
 
+@-webkit-keyframes fade { 0% { opacity: 0; } 100% { opacity: 1; } }
+@-moz-keyframes fade { 0% { opacity: 0;  } 100% { opacity: 1;} }
+@-o-keyframes fade  { 0% { opacity: 0;  } 100% { opacity: 1;} }
+@keyframes fade  { 0% { opacity: 0;  } 100% { opacity: 1;} }
+
 @-webkit-keyframes fadeLeft { 0% { opacity: 0; -webkit-transform: translateX(-10%); } 100% { opacity: 1; -webkit-transform: translateX(0); } }
 @-moz-keyframes fadeLeft { 0% { opacity: 0; -moz-transform: translateX(-10%); } 100% { opacity: 1; -moz-transform: translateX(0); } }
 @-o-keyframes fadeLeft { 0% { opacity: 0; -o-transform: translateX(-10%); } 100% { opacity: 1; -o-transform: translateX(0); } }
@@ -23,6 +28,8 @@
 @-moz-keyframes fadeTop { 0% { opacity: 0; -moz-transform: translateY(-10%); } 100% { opacity: 1; -moz-transform: translateX(0); } }
 @-o-keyframes fadeTop { 0% { opacity: 0; -o-transform: translateY(-10%); } 100% { opacity: 1; -o-transform: translateX(0); } }
 @keyframes fadeTop { 0% { opacity: 0; transform: translateY(-10%); } 100% { opacity: 1; transform: translateX(0); } }
+
+.pht-animated.pht-fade { opacity: 1; -webkit-animation: fade 1s 1 cubic-bezier(0.77,0,.175,1); -moz-animation: fade 1s 1 cubic-bezier(0.77,0,.175,1); -o-animation: fade 1s 1 cubic-bezier(0.77,0,.175,1); animation: fade 1s 1 cubic-bezier(0.77,0,.175,1);}
 
 .pht-animated.pht-l2r { opacity: 1; -webkit-animation: fadeLeft 1s 1 cubic-bezier(0.77,0,.175,1); -moz-animation: fadeLeft 1s 1 cubic-bezier(0.77,0,.175,1); -o-animation: fadeLeft 1s 1 cubic-bezier(0.77,0,.175,1); animation: fadeLeft 1s 1 cubic-bezier(0.77,0,.175,1);}
 
